--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.20.0"
     implementation "com.google.accompanist:accompanist-flowlayout:0.20.0"
 
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+
     implementation "io.coil-kt:coil-compose:1.3.2"
 
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
