--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
-
 android {
     compileSdk 31
 
@@ -48,17 +48,36 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/INDEX.LIST'
+        exclude 'META-INF/plexus/components.xml'
+        exclude 'META-INF/sisu/javax.inject.Named'
+        exclude 'META-INF/io.netty.versions.properties'
+        exclude 'META-INF/ASL2.0'
+        exclude("META-INF/*.kotlin_module")
+    }
 }
 
 dependencies {
+    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
+    implementation("io.vertx:vertx-maven-service-factory:4.2.0")
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.31"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
 
-    implementation "androidx.core:core-ktx:1.6.0"
-    implementation "androidx.activity:activity-compose:1.3.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.3.1"
-    implementation "androidx.navigation:navigation-compose:2.4.0-alpha10"
+    implementation "androidx.core:core-ktx:1.7.0"
+    implementation "androidx.activity:activity-compose:1.4.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0"
+    implementation "androidx.navigation:navigation-compose:2.4.0-beta01"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc01"
 
     implementation "androidx.compose.foundation:foundation:1.0.4"
@@ -75,7 +94,12 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.20.0"
     implementation "com.google.accompanist:accompanist-flowlayout:0.20.0"
 
-    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:29.0.0')
+    // Declare the dependencies for the Firebase Cloud Messaging and Analytics libraries
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-messaging-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
     implementation "io.coil-kt:coil-compose:1.3.2"
 
