--- a/build.gradle
+++ b/build.gradle
@@ -8,4 +8,23 @@ buildscript {
     ext {
         compose_version = '1.0.4'
     }
+    repositories {
+        mavenLocal()
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.0.3'
+        classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31'
+    }
+}
+
+allprojects {
+    repositories {
+        //mavenLocal() must be listed at the top to facilitate testing
+        mavenLocal()
+        google()
+        mavenCentral()
+    }
 }
