--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,8 +69,9 @@ android {
 dependencies {
     def room_version = "2.3.0"
 
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
-    implementation("io.vertx:vertx-maven-service-factory:4.2.0")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.31"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
@@ -80,7 +81,7 @@ dependencies {
     implementation "androidx.activity:activity-compose:1.4.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0"
     implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc01"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc02"
 
     implementation "androidx.compose.foundation:foundation:$compose_version"
     implementation "androidx.compose.foundation:foundation-layout:$compose_version"
